// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cursor /> hides component when \`props.visible\` is false 1`] = `
<svg
  style="opacity: 0;"
  class="sc-bdVaJa ltcOW"
  data-testid="Cursor"
>
  <line
    class="sc-htpNat jVvTZn"
    x1="10"
    x2="10"
    y1="0"
    y2="5"
  />
  <circle
    class="sc-bwzfXH byisMI"
    cx="10"
    cy="15"
  />
</svg>
`;

exports[`<Cursor /> renders without crashing 1`] = `
<svg
  style="opacity: 1;"
  class="sc-bdVaJa ltcOW"
  data-testid="Cursor"
>
  <line
    class="sc-htpNat jVvTZn"
    x1="10"
    x2="10"
    y1="0"
    y2="5"
  />
  <circle
    class="sc-bwzfXH byisMI"
    cx="10"
    cy="15"
  />
</svg>
`;

exports[`<Cursor /> shows component when \`props.visible\` is true 1`] = `
<svg
  style="opacity: 1;"
  class="sc-bdVaJa ltcOW"
  data-testid="Cursor"
>
  <line
    class="sc-htpNat jVvTZn"
    x1="10"
    x2="10"
    y1="0"
    y2="5"
  />
  <circle
    class="sc-bwzfXH byisMI"
    cx="10"
    cy="15"
  />
</svg>
`;
